Project 2: Fixed modal text color in dark mode, fixed button, fixed edit option in recipes

--- a/Project2/assets/css/style.css
+++ b/Project2/assets/css/style.css
@@ -25,6 +25,14 @@
   text-align: center;
 }
 
+.modal-title,
+.recipe-name,
+.recipe-ingredients,
+.recipe-instructions,
+.recipe-image {
+  color: #000;
+}
+
 #modal .modal-content {
   display: flex;
   justify-content: center;
@@ -33,7 +41,6 @@
   margin-left: 30%;
   border-radius: 20pt;
   background-color: #3a4640b2;
-  color: #fff;
 }
 
 #gallery1 {
